--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start-dev": "nodemon ./src/server.js",
     "start-prod": "NODE_ENV=production node ./src/server.js",
-    "lint": "eslint ./"
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "",
